@@ -3,6 +3,10 @@ ChangeLog
 
 Release: 1.3.3
 ===============================================================================
+2022-10-30 Added an explicit widget for pages so that the Qt central widget
+           remains untouched.
+           The setup pages are complete and are working.
+
 2022-10-18 Fixed input lines and lists for Android.
 
 2022-10-15 Fixed the compilation for Android.
